--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -1,4 +1,12 @@
 server.port = 8761
 
+eureka.client.enabled=true
+eureka.client.healthcheck.enabled=true
+eureka.client.registerWithEureka=false
 eureka.client.register-with-eureka = false
 eureka.client.fetch-registry = false
+eureka.instance.status-page-url-path=$(http://localhost:8080)/books/checked-out
+eureka.instance.hostname="localhost"
+eureka.instance.secure-port-enabled=false
+eureka.instance.non-secure-port=8716
+eureka.client.serviceUrl.defaultZone=${EUREKA_SERVICE_URL:http://localhost:8080/books/available,http://localhost:8080}/books/checked-out
