--- a/book/pom.xml
+++ b/book/pom.xml
@@ -29,15 +29,13 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
-		
-		
+
 		<dependency>
-		    <groupId>com.netflix.zuul</groupId>
-		    <artifactId>zuul-netflix</artifactId>
-		    <version>1.3.1</version>
-		</dependency>
-	
-	
+    <groupId>org.springframework.cloud</groupId>
+    <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
+    <version>2.2.2.RELEASE</version>
+</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
